<resources>
    <string name="app_name">QuirquiRutas</string>
    <string name="title_activity_maps1">Map</string>
    <string name="Correo_String">Correo Electronico</string>
    <string name="Contraseña_String">Contraseña</string>
    <string name="vacio"> </string>
    <string name="btn_ingresar">INGRESAR</string>
    <string name="btn_registro">REGISTRAR</string>
    <string name="title_activity_rutas">RutasActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
</resources>
